@@ -54,6 +54,10 @@
 #include <stdarg.h>
 #endif
 
+#ifdef DEBUG
+#include <malloc.h>
+#endif
+
 /* Suppress warnings for __attribute__((warn_unused_result)). */
 #define IGNORE_CALL_RESULT(call) do { if (call) {} } while(0)
 
