@@ -1,3 +1,8 @@
+2015-08-06  Benno Schulenberg  <bensberg@justemail.net>
+	* src/nano.c (main): For --enable-debug builds, let malloc() help
+	to find initialization failures and uses-after-free.  Suggested by
+	Mike Frysinger.
+
 2015-08-04  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (main), src/files.c (read_file), src/rcfile.c,
 	doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Add
